// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`highlightRTFRenderer should encode curly brackets and back slashes 1`] = `
"{\\\\rtf1\\\\ansi\\\\deff0
{\\\\fonttbl{\\\\f0\\\\fmodern\\\\fprq1\\\\fcharset0 Courier New;}}
{\\\\colortbl;\\\\red255\\\\green255\\\\blue255;\\\\red0\\\\green106\\\\blue0;\\\\red170\\\\green13\\\\blue145;\\\\red0\\\\green0\\\\blue136;\\\\red102\\\\green102\\\\blue0;\\\\red196\\\\green26\\\\blue22;\\\\red0\\\\green136\\\\blue0;\\\\red28\\\\green0\\\\blue207;\\\\red92\\\\green38\\\\blue153;\\\\red0\\\\green0\\\\blue0;\\\\red238\\\\green238\\\\blue238;\\\\red186\\\\green238\\\\blue186;\\\\red255\\\\green200\\\\blue189;\\\\red155\\\\green112\\\\blue63;}
\\\\paperw11905\\\\paperh16837\\\\margl1134\\\\margr1134\\\\margt1134\\\\margb1134\\\\sectd\\\\plain\\\\f1\\\\fs20
\\\\pard \\\\{\\\\par\\\\pard
    \\\\\\\\ test\\\\par\\\\pard
    \\\\}
}"
`;

exports[`highlightRTFRenderer should render a string 1`] = `
"{\\\\rtf1\\\\ansi\\\\deff0
{\\\\fonttbl{\\\\f0\\\\fmodern\\\\fprq1\\\\fcharset0 Courier New;}}
{\\\\colortbl;\\\\red255\\\\green255\\\\blue255;\\\\red0\\\\green106\\\\blue0;\\\\red170\\\\green13\\\\blue145;\\\\red0\\\\green0\\\\blue136;\\\\red102\\\\green102\\\\blue0;\\\\red196\\\\green26\\\\blue22;\\\\red0\\\\green136\\\\blue0;\\\\red28\\\\green0\\\\blue207;\\\\red92\\\\green38\\\\blue153;\\\\red0\\\\green0\\\\blue0;\\\\red238\\\\green238\\\\blue238;\\\\red186\\\\green238\\\\blue186;\\\\red255\\\\green200\\\\blue189;\\\\red155\\\\green112\\\\blue63;}
\\\\paperw11905\\\\paperh16837\\\\margl1134\\\\margr1134\\\\margt1134\\\\margb1134\\\\sectd\\\\plain\\\\f1\\\\fs20
\\\\pard {\\\\cf2 const} a = {\\\\cf5 \\"foo\\"};
}"
`;

exports[`highlightRTFRenderer should render multiple lines 1`] = `
"{\\\\rtf1\\\\ansi\\\\deff0
{\\\\fonttbl{\\\\f0\\\\fmodern\\\\fprq1\\\\fcharset0 Courier New;}}
{\\\\colortbl;\\\\red255\\\\green255\\\\blue255;\\\\red0\\\\green106\\\\blue0;\\\\red170\\\\green13\\\\blue145;\\\\red0\\\\green0\\\\blue136;\\\\red102\\\\green102\\\\blue0;\\\\red196\\\\green26\\\\blue22;\\\\red0\\\\green136\\\\blue0;\\\\red28\\\\green0\\\\blue207;\\\\red92\\\\green38\\\\blue153;\\\\red0\\\\green0\\\\blue0;\\\\red238\\\\green238\\\\blue238;\\\\red186\\\\green238\\\\blue186;\\\\red255\\\\green200\\\\blue189;\\\\red155\\\\green112\\\\blue63;}
\\\\paperw11905\\\\paperh16837\\\\margl1134\\\\margr1134\\\\margt1134\\\\margb1134\\\\sectd\\\\plain\\\\f1\\\\fs20
\\\\pard line1\\\\par\\\\pard
line2\\\\par\\\\pard
\\\\par\\\\pard
\\\\par\\\\pard
line5\\\\par\\\\pard

}"
`;

exports[`highlightRTFRenderer should render specific styles 1`] = `
"{\\\\rtf1\\\\ansi\\\\deff0
{\\\\fonttbl{\\\\f0\\\\fmodern\\\\fprq1\\\\fcharset0 Courier New;}}
{\\\\colortbl;\\\\red0\\\\green0\\\\blue0;\\\\red255\\\\green255\\\\blue255;\\\\red128\\\\green128\\\\blue128;\\\\red128\\\\green128\\\\blue0;\\\\red239\\\\green239\\\\blue239;\\\\red0\\\\green0\\\\blue128;\\\\red0\\\\green0\\\\blue255;\\\\red0\\\\green128\\\\blue0;\\\\red208\\\\green237\\\\blue237;\\\\red102\\\\green14\\\\blue122;\\\\red186\\\\green238\\\\blue186;\\\\red255\\\\green200\\\\blue189;}
\\\\paperw11905\\\\paperh16837\\\\margl1134\\\\margr1134\\\\margt1134\\\\margb1134\\\\sectd\\\\plain\\\\f1\\\\fs20
\\\\pard \\\\par\\\\pard
{\\\\cf2\\\\i // Comment}\\\\par\\\\pard
{ {\\\\b\\\\cf5 function} {\\\\cf0 test}({ }) }\\\\{\\\\}\\\\par\\\\pard

}"
`;
